--- a/aiko-developer-lite/framework/css/style.scss
+++ b/aiko-developer-lite/framework/css/style.scss
@@ -2,8 +2,13 @@
 
 .aiko-developer-code-actions {
 	/* background: #f6f7f7; */
-	margin: 0 -1em;
-	padding: 0.3em 1em 0;
+	margin: 0;
+    padding: 0.3em 0 0;
+	#post-body-content & {
+		border-bottom: 5px solid black;
+		margin-bottom: 2em;
+		padding-bottom: 2em;
+	}
 }
 
 .postbox-container { 
@@ -33,11 +38,31 @@
 	}	
 }
 
+.aiko-developer-blinker {
+	/* animation: aiko-developer-blink 0.2s 3; */
+	animation-name: aiko-developer-blink;
+	animation-duration: 0.2s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: 5;
+	opacity: 1;
+	transform: scale(1);
+	transition-property: transform;
+	transition-duration: 0.1s;
+	transition-timing-function: ease-in;
+}
+
+@keyframes aiko-developer-blink {
+   0% 		{ opacity: 1; transform: scale(1); }
+   50% 		{ opacity: 0.5; transform: scale(1.1); }
+   100% 	{ opacity: 1; transform: scale(1); }
+ }
+
 /* Comment input */
 
 #aiko-developer-input {
 	width: 100%;
 	border-color: #2c3338;
+    /* margin-bottom: 0.3em; */
 }
 
 /* Slug */
@@ -78,7 +103,7 @@
 			&.aiko-developer-post-data-bad {
 				color: red;	
 				span {
-					font-weight: 600;
+					font-weight: 700;
 					opacity: 1;
 				}	
 			}
@@ -104,17 +129,19 @@
 		padding: 0;
 		font-size: 1.4em;
 	}
-	.aiko-developer-block-description {
-		margin: 0 0 0.5em;
-		padding: 0;
-		opacity: 0.5;
-	}
 	.aiko-developer-block-content {
 		margin: 0;
 		padding: 1em;
 		border: 1px solid gray;
 		background: white;
 	}
+}
+
+.aiko-developer-block-description {
+	margin: 0 0 0.5em;
+	padding: 0;
+	opacity: 0.5;
+	line-height: inherit;
 }
 
 /* Active model */
@@ -159,9 +186,9 @@
 .aiko-developer-improvements-suggestions-wrapper {
 	display: flex;
 	gap: 2em;
-	margin-bottom: 2em;
-	padding-bottom: 2em;	
-	border-bottom: 5px solid black;
+	/* margin-bottom: 2em; */
+	/* padding-bottom: 2em;	 */
+	/* border-bottom: 5px solid black; */
 	body.post-new-php & {
 		border: none;
 	}
@@ -248,7 +275,7 @@
 	content: 'No code here';
 }
 
-#aiko-developer-improvement {
+.aiko-developer-improvement {
 	display: flex; 
 	input {
 		margin-top: 0.1em;
@@ -362,7 +389,7 @@
 	height: 100%;
 	background: rgba(0, 0, 0, 0.7);
 	display: none;
-	z-index: 9999;
+	z-index: 9998;
 	.aiko-developer-popup-content {
 		position: absolute;
 		top: 50%;
@@ -372,27 +399,30 @@
 		padding: 20px;
 		border-radius: 10px;
 		z-index: 10000;
+		max-width: 800px;
+		width: 100%;
+		height: 80%;
+		display: flex;
+		flex-direction: column;
 		h1, h2, h3, h4 {
 			padding: 0;
 			margin: 0;
+			line-height: 1.1;
 		}
 		.aiko-developer-popup-content-text {
 			margin: 1em 0;
 			padding: 1em 0;
 			border-bottom: 1px solid rgba(0, 0, 0, 0.3);			
-			border-top: 1px solid rgba(0, 0, 0, 0.3);			
+			border-top: 1px solid rgba(0, 0, 0, 0.3);	
+			flex-basis: 100%;
+			textarea {
+				width: 100%;
+				height: 100%;
+			}			
 		}
-		#aiko-developer-rephrased-popup-content-text,
-		#aiko-developer-rephrased-user-prompt-popup-content-text {
-			display: flex;
-			gap: 1em;
-			> div {
-				flex-basis: 50%;
-				b {
-					font-size: 1.2em;
-				}
-			}
-		}
+	}
+	&.aiko-developer-popup-confirm .aiko-developer-popup-content {
+		height: auto;
 	}
 }
 
@@ -402,6 +432,246 @@
 	.aiko-developer-popup-overlay .aiko-developer-popup-content {
 		left: 10%;
 		transform: translate(-5%, -50%);
+	}
+}
+
+body.aiko-developer-disabled {
+   height: 100%;
+   overflow-y: hidden;	
+}
+
+/* Rephrse new popup */
+
+#aiko-developer-comment-not-added, #aiko-developer-chatbox-wrapper > b {
+	display: none; /* TODO: skloni ovo */
+}
+
+
+#aiko-developer-rephrased-popup-content-text,
+#aiko-developer-rephrased-user-prompt-popup-content-text {
+	display: flex;
+	/* gap: 1em; */
+	flex: 1;
+	overflow: auto;
+	> div {
+		flex-basis: 50%;
+		b {
+			/* font-size: 1.1em; */
+		}
+	}
+}
+
+#aiko-developer-rephrased-popup-overlay.aiko-developer-popup-overlay {
+	.aiko-developer-popup-content {
+		width: 90%;
+		height: 80%;    
+		display: flex;
+		flex-direction: column;
+		max-width: initial;
+		.aiko-developer-popup-content-title {
+			.aiko-developer-block-description {
+				margin: 0;
+			}
+		}
+	}
+	.aiko-developer-popup-content-text {
+		padding: 0;
+		#aiko-developer-current {
+			background: white;
+			padding: 1em 1em 0 0;
+			overflow-y: scroll;
+			font-size: 14px;
+			line-height: 1.5;
+			div {
+				font-size: inherit;
+				line-height: inherit;
+			}
+			div#aiko-developer-current-text {
+				margin: 0;
+				padding: 0;
+			}
+		}	
+		#aiko-developer-chatbox-wrapper {
+			#aiko-developer-chatbox {
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				#aiko-developer-chatbox-messages-buttons {
+					background: white;
+					flex-basis: 100%;
+					overflow-y: scroll;
+					#aiko-developer-chatbox-messages {
+						.aiko-developer-chatbox-single-message{
+							margin: 0 1em;
+							padding: 1em 0;
+							border-top: 2px solid gray;
+							opacity: 0.5;
+							&:first-of-type {
+								border-top: none;
+							}	
+							&:last-of-type {
+								opacity: 1;
+								padding: 1em 1em 0;
+								border-left: 2px solid gray;
+								border-right: 2px solid gray;
+								border-radius: 10px 10px 0 0;
+								&:first-of-type {
+									margin-top: 1em;
+									border-top: 2px solid gray;
+								}
+							}	
+						}
+						.aiko-developer-chatbox-user-message {
+							/* opacity: 0.5; */
+							margin-bottom: 1em;
+							padding-bottom: 1em;
+							border-bottom: 1px solid #eee;
+							div {
+								&:not(:first-of-type) {
+									margin-top: 0.5em;
+								}
+							}
+							p {
+								margin: 0;
+								padding: 0;
+								&.aiko-developer-chatbox-user-message-comment,
+								&.aiko-developer-chatbox-user-message-question {
+									font-weight: 600;
+									font-size: 1.1em;						
+								}
+								&.aiko-developer-chatbox-user-message-comment,
+								&.aiko-developer-chatbox-user-message-question,
+								&.aiko-developer-chatbox-user-message-answer {	
+									position: relative;
+									padding-left: 1.5em;						
+									&:before {
+										font-weight: 400;
+										font-family: dashicons;
+										margin-right: 0.25em;
+										font-size: 16px;
+										vertical-align: middle;
+										position: absolute;
+										left: 0;
+										top: 0;
+									}
+								}
+								&.aiko-developer-chatbox-user-message-comment:before {
+									content: "\f101";
+								}
+								&.aiko-developer-chatbox-user-message-question:before {
+									content: "\f179";
+								}
+								&.aiko-developer-chatbox-user-message-answer:before {
+									/* content: "\f339"; */
+									content: " ";
+									padding-left: 1em;
+								}
+							}
+						}
+						.aiko-developer-chatbox-consultant-message {
+							p:first-of-type {
+								margin-top: 0;
+							}
+						}						
+					}
+					#aiko-developer-chatbox-buttons {
+						margin: 0 1em 1em;
+						padding: 1em;
+						border: 2px solid gray;
+						border-radius: 0 0 10px 10px;
+						border-top: none;
+						#aiko-developer-chatbox-cancel-final,
+						#aiko-developer-chatbox-submit-final {
+							&:before {
+								font-family: dashicons;
+								margin-right: 0.25em;
+								font-size: 16px;
+								line-height: 1;
+								vertical-align: middle;
+							}							
+						}
+						#aiko-developer-chatbox-cancel-final {
+							border: none;
+							background: transparent;
+							color: #F44336;
+							&:before {
+								content: "\f158";
+							}
+						}
+						#aiko-developer-chatbox-submit-final {
+							border-color: #4CAF50;
+							background: #4CAF50;
+							color: white;
+							&:before {
+								content: "\f15e";
+							}
+						}
+					}
+				}
+				#aiko-developer-chatbox-comments {
+					display: flex;
+					align-items: end;
+					gap: 1em;
+					border-top: 3px solid black;
+					padding: 1em;
+					h4 {
+						margin-bottom: 0em;
+						padding-bottom: 0em;
+						font-size: 1.2em;
+					}
+					.aiko-developer-block-description {
+					}
+					#aiko-developer-chatbox-comment {
+						flex-basis: 100%;
+						textarea {
+							width: 100%;
+							height: 3em;
+							display: block;
+							&:focus {
+								height: 6em;
+							}
+						}
+						.aiko-developer-lite & {
+							opacity: 0.5;
+						}
+					}
+					#aiko-developer-chatbox-clarifications {
+						flex-basis: 100%;
+						.aiko-developer-block-description {
+							padding-bottom: 0.5em;
+							border-bottom: 1px solid #eee;
+						}
+						.aiko-developer-chatbox-clarification-question {
+							font-weight: 600;
+							margin-bottom: 0.25em;
+							/* font-size: 1.1em; */
+							
+						}
+						div:first-of-type .aiko-developer-chatbox-clarification-question {
+							margin-top: 0;
+						}
+						label {
+							margin-right: 1em;
+							font-style: italic;
+							&:last-of-type {
+								white-space: nowrap;
+							}
+						}
+						.aiko-developer-other-input {
+							margin-top: 0.2em;
+							width: 100%;
+							input {
+								width: 100%;
+							}
+						}
+					}
+					#aiko-developer-chatbox-confirm {
+						
+					}
+				}
+				
+			}			
+		}
 	}
 }
 
@@ -480,7 +750,7 @@
 			border-left: solid transparent 10px;
 			border-right: solid transparent 10px;
 			border-top: solid #444 10px;
-			bottom: -10px;
+			bottom: -9px;
 			content: " ";
 			height: 0;
 			left: 50%;
@@ -608,6 +878,16 @@
 	p:last-of-type {
 		padding-top: 1em;
 	}
+}
+
+#aiko-developer-chatbox-messages #aiko-developer-buy-full-wrapper {
+    margin: 1em;
+}
+
+
+.aiko-developer-lite #aiko-developer-chatbox-comment {
+	opacity: 0.5;
+	pointer-events: none;
 }
 
 .aiko-developer-welcome-wrapper.aiko-developer-lite-welcome-wrapper h1 {
