--- a/aiko-developer-lite/framework/css/style.css
+++ b/aiko-developer-lite/framework/css/style.css
@@ -59,6 +59,18 @@
     transform: scale(1);
   }
 }
+#aiko-developer-after-title, #aiko-developer-download-meta-box, #aiko-developer-confidence-meta-box, #aiko-developer-suggestions-meta-box, #aiko-developer-php-output-meta-box, #aiko-developer-js-output-meta-box, #aiko-developer-css-output-meta-box {
+  display: none;
+}
+
+.mfp-bg {
+  z-index: 9999 !important;
+}
+
+.mfp-wrap {
+  z-index: 10000 !important;
+}
+
 /* Comment input */
 #aiko-developer-input {
   width: 100%;
@@ -179,15 +191,15 @@
   /* margin-bottom: 2em; */
   /* padding-bottom: 2em;	 */
   /* border-bottom: 5px solid black; */
+  /*#aiko-developer-improvements-wrapper {
+  	flex-basis: 35%; 
+  }*/
 }
 body.post-new-php .aiko-developer-improvements-suggestions-wrapper {
   border: none;
 }
 .aiko-developer-improvements-suggestions-wrapper #aiko-developer-input-wrapper {
-  flex-basis: 65%;
-}
-.aiko-developer-improvements-suggestions-wrapper #aiko-developer-improvements-wrapper {
-  flex-basis: 35%;
+  flex-basis: 100%;
 }
 body.post-new-php .aiko-developer-improvements-suggestions-wrapper {
   flex-wrap: wrap;
@@ -295,7 +307,7 @@ body.post-new-php .aiko-developer-improvements-suggestions-wrapper #aiko-develop
   align-self: center;
 }
 .aiko-developer-notice .aiko-developer-notice-content h4 {
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
   padding: 0;
   font-weight: 700;
   font-size: 1.1em;
@@ -414,12 +426,22 @@ body.aiko-developer-disabled {
   overflow-y: hidden;
 }
 
-/* Rephrse new popup */
+/* Rephrase new popup */
 #aiko-developer-comment-not-added, #aiko-developer-chatbox-wrapper > b {
   display: none;
   /* TODO: skloni ovo */
 }
 
+#aiko-developer-rephrase,
+#aiko-developer-import-prompt {
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+/* Temp */
+/*#aiko-developer-import-prompt {
+    display: none !important;
+	opacity: 0 !important;
+}*/
 #aiko-developer-rephrased-popup-content-text,
 #aiko-developer-rephrased-user-prompt-popup-content-text {
   display: flex;
@@ -570,6 +592,9 @@ body.aiko-developer-disabled {
 #aiko-developer-rephrased-popup-overlay.aiko-developer-popup-overlay .aiko-developer-popup-content-text #aiko-developer-chatbox-wrapper #aiko-developer-chatbox #aiko-developer-chatbox-messages-buttons #aiko-developer-chatbox-buttons #aiko-developer-chatbox-submit-final:before {
   content: "";
 }
+#aiko-developer-rephrased-popup-overlay.aiko-developer-popup-overlay .aiko-developer-popup-content-text #aiko-developer-chatbox-wrapper #aiko-developer-chatbox #aiko-developer-chatbox-messages-buttons #aiko-developer-chatbox-buttons .aiko-developer-tooltip-container {
+  margin-top: 0.5em;
+}
 #aiko-developer-rephrased-popup-overlay.aiko-developer-popup-overlay .aiko-developer-popup-content-text #aiko-developer-chatbox-wrapper #aiko-developer-chatbox #aiko-developer-chatbox-comments {
   display: flex;
   align-items: end;
@@ -677,6 +702,7 @@ body.aiko-developer-disabled {
   display: block;
   vertical-align: bottom;
   opacity: 0.5;
+  width: 16px;
 }
 .aiko-developer-tooltip-container i.dashicons:hover {
   opacity: 1;
@@ -708,6 +734,15 @@ body.aiko-developer-disabled {
   margin-left: -13px;
   position: absolute;
   width: 0;
+}
+.aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning .aiko-developer-tooltip-text {
+  background: red;
+}
+.aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning .aiko-developer-tooltip-text:after {
+  border-top: solid red 10px;
+}
+.aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning i.dashicons {
+  color: red;
 }
 .aiko-developer-tooltip-container.aiko-developer-tooltip-arrow-right .aiko-developer-tooltip-text {
   left: -164px;
@@ -785,6 +820,201 @@ body.aiko-developer-disabled {
 
 .aiko_developer_additional_instalations_ul {
   margin-bottom: 0;
+}
+
+.aiko-developer-settings-show {
+  display: block !important;
+}
+
+form.aiko-developer-settings-hidden {
+  display: none;
+}
+
+form.aiko-developer-settings-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.aiko-developer-settings-on-top {
+  order: -1;
+}
+
+.aiko-developer-ai-selection label {
+  margin-right: 5px;
+}
+
+/* Import */
+.aiko-developer-popup-content.aiko-developer-popup-content-import {
+  max-width: 1200px;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import .aiko-developer-not-matching {
+  color: red;
+  opacity: 1 !important;
+  FONT-WEIGHT: 600;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import .aiko-developer-popup-content-title #aiko-developer-prompt-base-close {
+  position: absolute;
+  right: 1.5em;
+  top: 1.5em;
+  color: red;
+  cursor: pointer;
+  color: #F44336;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import .aiko-developer-popup-content-title #aiko-developer-prompt-base-close:before {
+  font-family: dashicons;
+  margin-right: 0.25em;
+  font-size: 16px;
+  line-height: 1;
+  vertical-align: middle;
+  content: "";
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text {
+  display: flex;
+  gap: 1em;
+  overflow: hidden;
+  padding: 0;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list {
+  flex: 1;
+  height: 100%;
+  padding-right: 1em;
+  padding: 1em 1em 0 0;
+  box-sizing: border-box;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner {
+  height: calc(100% - 2em);
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-tabs {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-tabs .aiko-developer-prompt-base-tab {
+  padding: 4px 8px;
+  cursor: pointer;
+  background: #f0f0f0;
+  border-radius: 5px;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-tabs .aiko-developer-prompt-base-tab.aiko-developer-prompt-base-active {
+  background: #007BFF;
+  color: white;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner #aiko-developer-prompt-base-prompts {
+  overflow: auto;
+  height: calc(100% - 2em);
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container {
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container.aiko-developer-prompt-base-selected {
+  border-color: #007BFF;
+  background-color: #E6F0FF;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container.aiko-developer-prompt-base-pro-only {
+  opacity: 0.3;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container.aiko-developer-prompt-base-pro-only:hover {
+  opacity: 1;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container h3 {
+  margin-bottom: 0.2em;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container p {
+  margin: 0;
+  font-size: 12px;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container p strong {
+  display: inline-block;
+  width: 100px;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container p.aiko-developer-prompt-base-prompt-model {
+  display: inline-block;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container p span.aiko-developer-prompt-base-prompt-span-temperature {
+  opacity: 0.7;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container p.aiko-developer-prompt-base-prompt-description {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
+  opacity: 0.7;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container .aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning {
+  opacity: 0;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container .aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning:first-of-type {
+  /* margin-left: 0.5em; */
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-list #aiko-developer-prompt-base-list-inner .aiko-developer-prompt-base-container:hover .aiko-developer-tooltip-container.aiko-developer-prompt-base-prompt-warning {
+  opacity: 1;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview {
+  flex: 1;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview #aiko-developer-importing-selected-heading {
+  /* border-bottom: 1px solid #ccc; */
+  /* margin-bottom: 0.5em; */
+  /* padding-bottom: 0.5em; */
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview #aiko-developer-importing-selected-prompt-wrapper {
+  overflow: auto;
+  /* height: calc(76% - 2em); */
+  flex-basis: 100%;
+  padding: 0.5em 0.5em 0.5em 0em;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview #aiko-developer-importing-selected {
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  margin: 1em 0;
+  /* overflow: auto; */
+  box-sizing: border-box;
+  height: calc(100% - 2em);
+  display: flex;
+  flex-direction: column;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview h3 {
+  margin: 0 0 0.2em;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p {
+  margin: 0;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p strong {
+  display: inline-block;
+  width: 100px;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p span#aiko-developer-importing-selected-temperature {
+  opacity: 0.7;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p.aiko-developer-prompt-base-prompt-model {
+  /* display: inline-block; */
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 0.5em;
+  padding-bottom: 0.5em;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p#aiko-developer-importing-selected-description {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.5em;
+  /* margin-bottom: 0.5em; */
+  opacity: 0.7;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview #aiko-developer-importing-buttons {
+  border-top: 1px solid #ddd;
+  padding-top: 0.75em;
+  /* margin-top: 0.75em; */
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview p.aiko-developer-importing-selected-prompt-text strong {
+  width: 100%;
+}
+.aiko-developer-popup-content.aiko-developer-popup-content-import #aiko-developer-prompt-base-content-text #aiko-developer-prompt-base-preview #aiko-developer-prompt-base-submit {
+  /* margin-top: 1em; */
 }
 
 /* Lite special */
