--- a/aiko-developer-lite/framework/css/style.scss
+++ b/aiko-developer-lite/framework/css/style.scss
@@ -783,6 +783,14 @@ body.aiko-developer-disabled {
 			position: absolute;
 			width: 0;
 		}
+		#aiko-developer-importing-selected & {
+			bottom: -400%;
+			&:after {
+				transform: rotate(180deg);
+				top: -9px;
+				bottom: auto;
+			}
+		}
 	}
 	&.aiko-developer-prompt-base-prompt-warning {
 		.aiko-developer-tooltip-text {
@@ -890,6 +898,10 @@ body.aiko-developer-disabled {
 
 form.aiko-developer-settings-hidden {
 	display: none;
+}
+
+form.aiko-developer-hidden {
+	display: none !important;
 }
 
 form.aiko-developer-settings-form {
